Fixed bug of slider going behind the 3D globe

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -146,6 +146,7 @@ line {
 .map-slider {
   grid-area: 'map-slider';
   display: block;
+  z-index: 1000;
 }
 
 .box-3 {
